添加每日总结通过id获取数据
